k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
#  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: nginx-80
      port: 80
      protocol: TCP
#      targetPort: 80
