k8s/nginx/ingress-scale.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
#  namespace: basic-k8s
  labels:
    name: ingress
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
          - path: /offset
            backend:
              serviceName: offset
              servicePort: 1323
          - path: /topics
            backend:
              serviceName: topics
              servicePort: 3000
