k8s/nginx/ingress.yaml
#apiVersion: extensions/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
#  namespace: scale-service
  labels:
    name: ingress
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /offset(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: offset
                port:
                  number: 1323
          - path: /topics(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: topics
                port:
                  number: 3000
